[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib] 
# We will specify a library named 'name' field. If unspecified,
# cargo will default to 'package.name', which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.15", features = ["serde"] }  # Add chrono here with optional features if necessary


# [dependecies.sqlx]
# version = "0.5.7"
# default-features = false
# features = [
#    "runtime-actix-rustls",
#    "macros",
#    "postgres",
#    "uuid",
#    "chrono",
#    "migrate"
# ]


[dev-dependencies]
reqwest = "0.11"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
